@@ -3,6 +3,7 @@ package com.netflix.curator.utils;
 public class DebugUtils
 {
     public static final String          PROPERTY_LOG_EVENTS = "curator-log-events";
+    public static final String          PROPERTY_DONT_LOG_CONNECTION_ISSUES = "curator-dont-log-connection-problems";
 
     private DebugUtils()
     {
